<resources>
    <string name="app_name">Uni2Biz</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">User name</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="registration">Registration</string>
    <string name="btn_sign_in">SIGN IN</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="if_forgot_password">If you forgot password, you can request a new one. An email with a link will be sent to the email address you used to register</string>
    <string name="title">Title</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="role">Role</string>
    <string name="by_tipping_register">By tipping REGISTER I accept</string>
    <string name="terms_of_service">terms of service</string>
    <string name="subscribe_me">Subscribe me to Uni2Biz newsletters</string>
    <string name="register">Register</string>
    <string name="email_address">Email address</string>
    <string name="send">Send</string>
    <string name="tap_to_upload">Tap to upload</string>
    <string name="ValidateSuccess">ValidationSuccess</string>
    <string name="ValidationError">ValidationError</string>
    <string name="СhoosePhoto">Сhoose photo</string>
    <string name="userValide">User Name is not valid</string>
    <string name="emailValide">Email is not valide</string>
    <string name="pswValide">Password must contain lowercase and uppercase Latin letters and numbers</string>
    <string name="errorSpinner">Сhoose something</string>
    <string name="errorFirstName">First Name must contain only letters</string>
    <string name="errorUserName">User name must contain 4–20 characters, which can be letters and numbers, the first character must be a letter</string>
    <string name="errorLastName">Last Name must contain only letters</string>
    <string name="errorPhone">Enter the phone number</string>
    <string name="errorUniversity">Enter your University</string>
    <string name="fillAllFields">Fill all fields please!</string>
</resources>
