<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_u2b"
            tools:ignore="VectorDrawableCompat" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#fff"
            app:cardCornerRadius="4dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.35">

                <TextView
                    android:id="@+id/txtSingIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/sign_in"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/user"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:padding="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/locked"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtSingIn"
                    app:srcCompat="@drawable/ic_avatar" />

                <EditText
                    android:id="@+id/etUserName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:shadowColor="@color/colorGreenNormal"
                    app:layout_constraintBottom_toBottomOf="@id/user"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/user"
                    app:layout_constraintTop_toTopOf="@+id/user" />

                <ImageView
                    android:id="@+id/locked"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="24dp"
                    android:padding="5dp"
                    app:layout_constraintStart_toStartOf="@+id/user"
                    app:layout_constraintTop_toBottomOf="@id/user"
                    app:srcCompat="@drawable/ic_padlock" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorLink="@color/colorGreenNormal"
                    app:layout_constraintBottom_toBottomOf="@id/locked"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/locked"
                    app:layout_constraintTop_toTopOf="@+id/locked" />

                <TextView
                    android:id="@+id/btnForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorGreenNormal"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@id/etPassword"
                    app:layout_constraintTop_toBottomOf="@+id/etPassword" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/etPassword"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@id/locked"
                    app:layout_constraintTop_toBottomOf="@+id/btnForgotPassword">

                    <Button
                        android:id="@+id/btnRegistration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="40dp"
                        android:layout_weight="2"
                        android:background="@color/colorRedNormal"
                        android:text="@string/registration"
                        android:textColor="#fff" />

                    <Button
                        android:id="@+id/btnSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_weight="1"
                        android:background="@color/colorGreenNormal"
                        android:text="@string/btn_sign_in"
                        android:textColor="#fff"
                        android:textColorLink="@color/colorGreenPressed" />
                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</FrameLayout>